# RigOs

./: Cargo.toml  LICENSE  deny.toml  gemini.md
crates/rigos-cli/: Cargo.toml
crates/rigos-cli/src/: main.rs
crates/rigos-core/: Cargo.toml
crates/rigos-core/src/: agent.rs  engine.rs  lib.rs  state.rs
crates/rigos-mcp/: Cargo.toml
crates/rigos-mcp/src/: lib.rs  opal.rs  protocol.rs  registry.rs  remote_opa.rs  router.rs
crates/rigos-sandbox/: Cargo.toml
crates/rigos-sandbox/src/: engine.rs  lib.rs
crates/rigos-server/: Cargo.toml  build.rs
crates/rigos-server/proto/: rigos_agent.proto
crates/rigos-server/src/: config.rs  grpc.rs  lib.rs  main.rs  routes.rs  server.rs
crates/rigos-skills/: Cargo.toml
crates/rigos-skills/src/: engine.rs  lib.rs  router.rs  skill.rs
crates/rigos-state/: Cargo.toml
crates/rigos-state/migrations/: 001_init.sql
crates/rigos-state/src/: lib.rs  models.rs  store.rs
docs/: enterprise-audit-architecture.md  phase-7-real-transports-opa-grpc.md  phase-8-production-trust-boundary.md
