[package]
name = "rigos-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rigos-core = { path = "../rigos-core" }
rigos-sandbox = { path = "../rigos-sandbox" }
rigos-state = { path = "../rigos-state" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio.workspace = true
