[package]
name = "rigos-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rigos-core = { path = "../rigos-core" }
rig-core.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
